K8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: tiny-url-namespace
spec:
  containers:
  - name: debug
    image: hassankalantari/tiny-url-django:latest
    command: ["sleep", "3600"]
