K8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
  namespace: tiny-url-namespace
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
