K8s/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tiny-url-namespace
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
